{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 12,
  "lineage": "24beea4e-5b83-d0d6-2a60-db7ef5acd504",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project-gtak",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ansible",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:665999949270:instance/i-0d15d2f4f12f05e08",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d15d2f4f12f05e08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_gtak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a9485a2e77903bf8",
            "private_dns": "ip-10-1-1-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.53",
            "public_ip": "3.84.78.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02113f6155b68e6b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023c7f82cc8b5b8af",
            "tags": {
              "Name": "ansible"
            },
            "tags_all": {
              "Name": "ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a70355fd20678467"
            ]
          },
          "dependencies": [
            "aws_security_group.gtak-sg",
            "aws_subnet.gtak-public-subnet-01",
            "aws_vpc.gtak-vpc"
          ]
        },
        {
          "index_key": "jenikns-slave",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:665999949270:instance/i-0dc7accbc7d65084e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc7accbc7d65084e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_gtak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-012d80e38fd542028",
            "private_dns": "ip-10-1-1-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.95",
            "public_ip": "34.229.107.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e3fd0602d456c4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023c7f82cc8b5b8af",
            "tags": {
              "Name": "jenikns-slave"
            },
            "tags_all": {
              "Name": "jenikns-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a70355fd20678467"
            ]
          },
          "dependencies": [
            "aws_security_group.gtak-sg",
            "aws_subnet.gtak-public-subnet-01",
            "aws_vpc.gtak-vpc"
          ]
        },
        {
          "index_key": "jenkins-master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:665999949270:instance/i-03635679b362679ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03635679b362679ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project_gtak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0526c229b6a4cdbab",
            "private_dns": "ip-10-1-1-131.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.131",
            "public_ip": "34.229.248.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083011ec7f6da248a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023c7f82cc8b5b8af",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a70355fd20678467"
            ]
          },
          "dependencies": [
            "aws_security_group.gtak-sg",
            "aws_subnet.gtak-public-subnet-01",
            "aws_vpc.gtak-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gtak-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665999949270:internet-gateway/igw-06be4165b56f2a940",
            "id": "igw-06be4165b56f2a940",
            "owner_id": "665999949270",
            "tags": {
              "Name": "gtak-igw"
            },
            "tags_all": {
              "Name": "gtak-igw"
            },
            "vpc_id": "vpc-0db5bf13b66f7afac"
          },
          "dependencies": [
            "aws_vpc.gtak-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gtak-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665999949270:route-table/rtb-0af67733bba75b250",
            "id": "rtb-0af67733bba75b250",
            "owner_id": "665999949270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06be4165b56f2a940",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0db5bf13b66f7afac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gtak-igw",
            "aws_vpc.gtak-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gtak-rta-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2961e6fbb4d4eb2",
            "route_table_id": "rtb-0af67733bba75b250",
            "subnet_id": "subnet-023c7f82cc8b5b8af"
          },
          "dependencies": [
            "aws_internet_gateway.gtak-igw",
            "aws_route_table.gtak-public-rt",
            "aws_subnet.gtak-public-subnet-01",
            "aws_vpc.gtak-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gtak-rta-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8b1aa80a4b364b0",
            "route_table_id": "rtb-0af67733bba75b250",
            "subnet_id": "subnet-0efdf278d3a255313"
          },
          "dependencies": [
            "aws_internet_gateway.gtak-igw",
            "aws_route_table.gtak-public-rt",
            "aws_subnet.gtak-public-subnet-02",
            "aws_vpc.gtak-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gtak-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665999949270:security-group/sg-0a70355fd20678467",
            "description": "SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a70355fd20678467",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins-port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gtak-sg",
            "name_prefix": "",
            "owner_id": "665999949270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-port"
            },
            "tags_all": {
              "Name": "ssh-port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db5bf13b66f7afac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gtak-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gtak-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665999949270:subnet/subnet-023c7f82cc8b5b8af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023c7f82cc8b5b8af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665999949270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gtak-public-subent-01"
            },
            "tags_all": {
              "Name": "gtak-public-subent-01"
            },
            "vpc_id": "vpc-0db5bf13b66f7afac"
          },
          "dependencies": [
            "aws_vpc.gtak-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gtak-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665999949270:subnet/subnet-0efdf278d3a255313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efdf278d3a255313",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665999949270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gtak-public-subent-02"
            },
            "tags_all": {
              "Name": "gtak-public-subent-02"
            },
            "vpc_id": "vpc-0db5bf13b66f7afac"
          },
          "dependencies": [
            "aws_vpc.gtak-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gtak-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665999949270:vpc/vpc-0db5bf13b66f7afac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ea1ff8723a54bcda",
            "default_route_table_id": "rtb-0dc6161e519282036",
            "default_security_group_id": "sg-0ff853c2147364966",
            "dhcp_options_id": "dopt-037809bea9e800634",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db5bf13b66f7afac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc6161e519282036",
            "owner_id": "665999949270",
            "tags": {
              "Name": "gtak-vpc"
            },
            "tags_all": {
              "Name": "gtak-vpc"
            }
          }
        }
      ]
    }
  ]
}